lib/bait/tests/inout_error/match/branch_no_return.in.bt
fun foo() i32 {
	return match 'two' {
		'one' { 1 }
		'two' { }
		else { 0 }
	}
}
